# PITA-Procedural-and-Iterative-Terrain-Assembly

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  environment.py  placer.py  requirements.txt  run_linux.sh  run_osx.sh  run_windows.bat  setup.cfg
.github/workflows/: black.yml  publish-to-test-pypi.yml  pylint.yml
docs/: README.md
docs/source/: conf.py  config.rst  index.rst  install.rst  modules.rst  paper.rst  peters_algorithm.base.area.rst  peters_algorithm.base.asset_parsing.mujoco_object.rst  peters_algorithm.base.asset_placement.abstract_placer.rst  peters_algorithm.base.asset_placement.abstract_rule.rst  peters_algorithm.base.asset_placement.border_placer.rst  peters_algorithm.base.asset_placement.fixed_placer.rst  peters_algorithm.base.asset_placement.random_placer.rst  peters_algorithm.base.asset_placement.rst  peters_algorithm.base.border_placer.rst  peters_algorithm.base.environment.rst  peters_algorithm.base.mujoco_loader.rst  peters_algorithm.base.mujoco_object.rst  peters_algorithm.base.parser.rst  peters_algorithm.base.placer.rst  peters_algorithm.base.random_placer.rst  peters_algorithm.base.rst  peters_algorithm.base.site.rst  peters_algorithm.base.validator.rst  peters_algorithm.base.world_container.abstract_container.rst  peters_algorithm.base.world_container.area.rst  peters_algorithm.base.world_container.rst  peters_algorithm.builder.rst  peters_algorithm.peters_algorithm.rst  peters_algorithm.pita.rst  peters_algorithm.rst  peters_algorithm.utils.config_reader.rst  peters_algorithm.utils.parser.rst  peters_algorithm.utils.rst  pita_algorithm.base.asset_parsing.mujoco_loader.rst  pita_algorithm.base.asset_parsing.mujoco_object.rst  pita_algorithm.base.asset_parsing.parser.rst  pita_algorithm.base.asset_parsing.rst  pita_algorithm.base.asset_placement.abstract_placer.rst  pita_algorithm.base.asset_placement.boundary_rule.rst  (+46 more)
examples/config_files/: ballpit.yml  complex-config.yml  simple-config.yml
examples/xml_objects/: 1stPersonBoxAgent.xml  3rdPBoxAgent.xml  Agent.xml  Apple.xml  Ball.xml  Border.xml  BoxAgent.xml  Camera.xml  Cube.xml  Cylinder.xml  Distractor.xml  Light.xml  Ramp.xml  Rectangle.xml  Sphere.xml  Stone.xml  Target.xml  Tree.xml  Tree01.xml  Tree_Ahorn.xml  Tree_Birch.xml  Tree_Maple.xml  free_joint.xml  freejoint.xml  humanoid.xml
export/: test.xml
peters_algorithm/: __init__.py  builder.py  peters_algorithm.py  pita.py
peters_algorithm/base/: area.py  assembler.py  border_placer.py  builder.py  environment.py  fixed_placer.py  mujoco_loader.py  mujoco_object.py  parser.py  placer.py  random_placer.py  site.py  validator.py
peters_algorithm/base/asset_parsing/: mujoco_loader.py  mujoco_object.py  parser.py
peters_algorithm/base/asset_placement/: abstract_placer.py  abstract_placer_distribution.py  abstract_rule.py  border_placer.py  boundary_rule.py  fixed_placer.py  min_distance_mujoco_physics_rule.py  min_distance_rule.py  placer.py  random_placer.py  rule.py  validator.py
peters_algorithm/base/world/: area.py  environment.py
peters_algorithm/base/world_container/: abstract_base_plane.py  abstract_container.py  area.py  environment.py
peters_algorithm/utils/: config_reader.py  json_exporter.py  multivariate_uniform_distribution.py  parser.py
pita_algorithm/: pita.py
pita_algorithm/base/: assembler.py
pita_algorithm/base/asset_parsing/: blueprint_manager.py  parser.py  (+2 more)
pita_algorithm/utils/: config_reader.py  example.ipynb  general_utils.py  json_exporter.py  logger.py  multivariate_uniform_distribution.py  object_property_randomization.py  xml_exporter.py
s.peters_algorithm/: builder.py  parser.py
s.peters_algorithm/base/: border_placer.py  mujoco_loader.py  mujoco_object.py  parser.py  placer.py  random_placer.py
s.peters_algorithm/utils/: example.ipynb  name_generator.py  parser.py  validator.py
src/pita_algorithm/: pita.py
src/pitapy/: pita.py
(+87 files in other folders)
