[metadata]
name = PITA
description_file = README.md
long_description_content_type = text/markdown
summary = Customizable randomization of world generation using mujoco physics engine for reinforcement learning.
license = GPLv3
author = MicrocosmAI
author_email =
url =
project_urls=
    Source Code = https://github.com/microcosmAI/s.peters_algorithm
    Documentation =
    Bug Tracker = https://github.com/microcosmAI/s.peters_algorithm/issues

download_url=
keywords=
    reinforcement learning
    rl
    multi agent reinforcement learning
    marl
    randomized world generation
    mujoco
    research
classifier=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
decription-file = README.md

[files]
packages=s.peters_algorithm
