[metadata]
name = pitapy_test
version = 0.0.5
description_file = README.md
long_description_content_type = text/markdown
summary = Fixing missing resources. Customizable randomization of world generation using mujoco physics engine for reinforcement learning.
license = GPLv3
author = MicrocosmAI
project_urls =
    Source Code = https://github.com/microcosmAI/s.peters_algorithm/
    Documentation = https://github.com/microcosmAI/s.peters_algorithm/tree/develop/docs/
    Bug Tracker = https://github.com/microcosmAI/s.peters_algorithm/issues/

download_url=
keywords=
    reinforcement learning
    rl
    multi agent reinforcement learning
    marl
    randomized world generation
    mujoco
    research
    procedural iterative terrain assembly
    dm_control
classifier=
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
long_description = file: README.md

#[files]
#packages=s.peters_algorithm

[options]
python_requires = >=3.9
install_requires =
    pyyaml  # config style reader
    dm_control  # handles mujoco/mjcfs
    shapely  # for collision detection
    matplotlib  # for plotting
    sphinx  # for documentation
    karma-sphinx-theme  # for documentation (theme)
    webcolors
    pillow
    typer
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src