[metadata]
name = pitapy
version = 1.0.1
description_file = README.md
long_description_content_type = text/markdown
summary = Customizable randomization of world generation using mujoco physics engine for reinforcement learning.
license = BSD-3-Clause
author = MicrocosmAI
project_urls =
    Source Code = https://github.com/microcosmAI/pita/
    Documentation = https://github.com/microcosmAI/pita/tree/develop/docs/
    Bug Tracker = https://github.com/microcosmAI/pita/issues/

keywords=
    reinforcement learning
    rl
    multi agent reinforcement learning
    marl
    randomized world generation
    mujoco
    research
    procedural iterative terrain assembly
    dm_control
classifier=
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers
long_description = file: README.md

[options]
python_requires = >=3.9
install_requires =
    pyyaml  # config style reader
    dm_control  # handles mujoco/mjcfs
    shapely  # for collision detection
    matplotlib  # for plotting
    sphinx  # for documentation
    karma-sphinx-theme  # for documentation (theme)
    webcolors
    pillow
    typer
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src